--- a/content/en/_index.html
+++ b/content/en/_index.html
@@ -16,7 +16,7 @@ linkTitle = "scioer"
 	<a class="btn btn-lg btn-secondary mr-3 mb-4" href="https://pypi.org/project/scioer-builder/">
 		Instructors <i class="fas fa-arrow-alt-circle-right ml-2 "></i>
 	</a>
-	<p class="lead mt-5">Making open education resources easy to use for everyone!</p>
+	<p class="lead mt-5">Making open education resources easy for everyone!</p>
 	{{< blocks/link-down color="info" >}}
 </div>
 {{< /blocks/cover >}}
